# SFML-Chess-Game

./: .gitignore  CMakeLists.txt  tasks.txt
Assets/: form.txt  form1.txt  form2.txt  test.style
Assets/UI/: CreateRoomForm.ui  DirectConnectForm.ui  InOnlineGame.ui  MainMenu.ui  RoomListing.ui  RoomSelection.ui
Client/: ChessClient.cpp  ChessClient.hpp  ChessServer.cpp  ChessServer.hpp  ClientMessage.cpp  ClientMessage.hpp  ClientSession.hpp  Player.hpp  Random.hpp  Room.hpp  Server.hpp  ServerMessage.cpp  ServerMessage.hpp  main.cpp
Client/Scenes/: Chess.cpp  Chess.hpp  ChessBoard.cpp  ChessBoard.hpp  ChessPieces.cpp  ChessPieces.hpp  Game.cpp  Game.hpp  MoveablePiece.cpp  MoveablePiece.hpp  PieceHighlighter.hpp  PieceMarker.cpp  PieceMarker.hpp
Client/States/: AuthenticateState.hpp  GameState.hpp  GameStateManager.cpp  GameStateManager.hpp  InGameState.cpp  InGameState.hpp  InOfflineGameState.cpp  InOfflineGameState.hpp  InOnlineGameState.cpp  InOnlineGameState.hpp  MainMenuState.cpp  MainMenuState.hpp  RegisterState.cpp  RegisterState.hpp  RoomSelectionState.cpp  RoomSelectionState.hpp  SearchingOnlineState.hpp
Client/UI/: CreateRoomForm.cpp  CreateRoomForm.hpp  DirectConnectForm.cpp  DirectConnectForm.hpp  RoomListing.cpp  RoomListing.hpp
Core/Chess/: ChessPieces.hpp  MoveGenerator.cpp  MoveGenerator.hpp  Piece.hpp  PieceAction.hpp  PieceColor.hpp  PieceMovement.hpp  PieceType.hpp
Core/Engine/: GameState.hpp  GameStateManager.cpp  GameStateManager.hpp  LoadResult.hpp  ResourceKey.hpp  ResourceManager.cpp  ResourceManager.hpp  TileMap.cpp  TileMap.hpp  TileSet.hpp
Core/Inputs/: Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp
Core/Misc/: GameMode.hpp  MatchDuration.hpp  RoomStatus.hpp
Core/Utility/: Helper.hpp  Logger.cpp  Logger.hpp  ScopedTimer.hpp
Network/: ChessClient.cpp  ChessClient.hpp  ChessServer.cpp  ChessServer.hpp  ClientMessage.cpp  ClientMessage.hpp  ClientSession.hpp  Player.hpp  Room.hpp  Server.hpp  ServerMessage.cpp  ServerMessage.hpp
src/: main.cpp
src/Engine/: ChessPieces.hpp  LoadResult.hpp  MachineState.hpp  MoveGenerator.hpp  Piece.hpp  PieceAction.hpp  PieceColor.hpp  PieceMovement.hpp  PieceType.hpp  RTexture.cpp  RTexture.hpp  Resource.cpp  Resource.hpp  ResourceKey.hpp  ResourceManager.cpp  ResourceManager.hpp  Singleton.hpp  TileMap.cpp  TileMap.hpp  TileSet.hpp  ValidMoves.hpp
src/Inputs/: Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp
src/Scenes/: Chess.cpp  Chess.hpp  Game.cpp  Game.hpp  MoveablePiece.cpp  MoveablePiece.hpp  PieceHighlighter.hpp
src/States/: GameState.hpp  GameStateManager.cpp  GameStateManager.hpp  InGameState.cpp  InGameState.hpp
src/Utility/: Helper.hpp  Logger.cpp  Logger.hpp  ScopedTimer.cpp
